--- a/.github/workflows/ecr-deploy.yml
+++ b/.github/workflows/ecr-deploy.yml
@@ -6,13 +6,13 @@ on:
   push:
     branches:
       - main
-      - workflow_dispatch
+
 env:
   AWS_REGION: "ap-south-1"                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: bigdata-dev           # set this to your Amazon ECR repository name
   ECS_SERVICE: go-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: bigdata-dev                  # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION_NAME: "service"         # set this to your amazon ecs task defination name
+  ECS_TASK_DEFINITION: .aws/task-definition.json       # set this to your amazon ecs task defination name
   CONTAINER_NAME: goservice           # set this to the name of the container in the
                                               
 
@@ -49,16 +49,12 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
-      - name: Download task definition
-        run: |
-         aws ecs describe-task-definition --task-definition service --query taskDefinition > task-definition.json
       
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
         with:
-          task-definition: task-definition.json
+          task-definition: ${{ env.ECS_TASK_DEFINITION }}
           container-name: ${{ env.CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.image }}
 
