--- a/.github/workflows/ecr-deploy.yml
+++ b/.github/workflows/ecr-deploy.yml
@@ -10,9 +10,10 @@ on:
 env:
   AWS_REGION: "ap-south-1"                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: bigdata-dev           # set this to your Amazon ECR repository name
-  ECS_SERVICE: go-service                 # set this to your Amazon ECS service name
+  ECS_SERVICE: goservice                 # set this to your Amazon ECS service name
   ECS_CLUSTER: bigdata-dev                  # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: .aws/task-definition.json       # set this to your amazon ecs task defination name          # set this to the name of the container in the
+  ECS_TASK_DEFINITION: .aws/task-definition.json       # set this to your amazon ecs task defination name
+  CONTAINER_NAME: goservice           # set this to the name of the container in the
                                               
 
 jobs:
@@ -54,6 +55,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
         with:
           task-definition: ${{ env.ECS_TASK_DEFINITION }}
+          container-name: ${{ env.CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
